fix: 修主圖套件爆炸

--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -27,9 +27,10 @@
                     <div class="splide01">
                         <div class="splide__track">
                             <ul class="splide__list">
-                                <!-- <li class="splide__slide"><img src="./img/products/strawberry_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/products/berry2_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/products/berry3_1200.jpg" alt=""></li> -->
+                                <li class="splide__slide"><img src="" alt=""></li>
+                                <li class="splide__slide"><img src="" alt=""></li>
+                                <li class="splide__slide"><img src="" alt=""></li>
+                                <li class="splide__slide"><img src="" alt=""></li>
                             </ul>
                         </div>
                     </div>
@@ -38,9 +39,10 @@
                         <div class="splide__track">
 
                             <ul class="splide__list under">
-                                <!-- <li class="splide__slide"><img src="./img/products/strawberry_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/products/berry2_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/products/berry3_1200.jpg" alt=""></li> -->
+                                <li class="splide__slide"><img src="" alt=""></li>
+                                <li class="splide__slide"><img src="" alt=""></li>
+                                <li class="splide__slide"><img src="" alt=""></li>
+                                <li class="splide__slide"><img src="" alt=""></li>
                             </ul>
 
                         </div>
