--- a/src/back_order.html
+++ b/src/back_order.html
@@ -25,7 +25,7 @@
                     <button @click="shipOrder" type="button" class="btn-red">出貨</button>
                 </div>
                 <div class="search-area">
-                    <input type="text" name="search" @keyup="searchOrder()" id="search_order">
+                    <input type="text" name="search" @keyup="searchOrder" id="search_order">
                     <img src="./img/icon/search.png" alt="" class="search_icon">
                 </div>
             </div>
