--- a/src/back_news.html
+++ b/src/back_news.html
@@ -35,16 +35,16 @@
                 </select>
 
                 <input type="search" placeholder="搜尋..." class="select_left">
-                <!-- <div class="search-area">
-                    <input type="text" name="search" id="search_news">
-                    <img src="./img/icon/search.png" alt="" class="search_icon">
+                <!-- <div class="search" enter-class="select_left">
+                    <input type="text" class="search-input" id="member_search" />
+                    <img src="./img/icon/search.png" alt="" class="search_icon" />
                 </div> -->
 
             </div>
 
         </div>
 
-        <main class="news-list">
+        <main class="news-list" id="back-news">
             <div class="main">
                 <p>封面標題</p>
                 <p>文章標題</p>
@@ -52,17 +52,17 @@
             </div>
     
             <ul class="list">
-                <li class="list_in">
+                <li class="list_in" v-for="news in list" :data-id="news.ID">
                     <label class="check_container">
                         <input type="checkbox">
                         <span class="checkmark"></span>
                     </label>
-                    <img src="./img/news/Rectangle 196.png" alt="">
-                    <p>【歡慶兒童節 帶小孩來牧場放電囉】</p>
-                    <p>2022/3/15 00:00</p>
-                    <button>編輯</button>
+                    <img :src="news.IMG" alt="">
+                    <p>{{news.TITLE}}</p>
+                    <p>{{news.DATE}}</p>
+                    <button type="button" @click="edit">編輯</button>
                 </li>
-                <li class="list_in">
+                <!-- <li class="list_in">
                     <label class="check_container">
                         <input type="checkbox">
                         <span class="checkmark"></span>
@@ -101,11 +101,11 @@
                     <p>【粉萌春日祭】3月周末例假日門票優惠開始啦!</p>
                     <p>2022/2/28 00:00</p>
                     <button>編輯</button>
-                </li>
+                </li> -->
             </ul>
             
         </main>
-        <div class="down">
+        <!-- <div class="down">
             <span><a href="">1</a></span>
             <span><a href="">2</a></span>
             <span><a href="">3</a></span>
@@ -113,7 +113,8 @@
             <span><a href="">5</a></span>
 
 
-        </div>
+        </div> -->
+        <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第74期第六組學員專題成果作品，本平台僅供學習、展示之用。</p>
     </article>
     <script src="./js/back_news.js"></script>
 </body>
