--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -1,143 +1,143 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+	<head>
+		@@include('./layout/head.html', { "title" : "Sìkha 牧場 | 周邊商品 | 商品"
+		})
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css"
+		/>
+	</head>
 
-<head>
-    @@include('./layout/head.html', {
-    "title" : "Sìkha 牧場 | 周邊商品 | 商品"
-    })
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css">
+	<body>
+		<!-- header -->
+		@@include('./layout/header.html') @@include('./layout/login_register.html')
 
-</head>
+		<!-- 商品內頁開始 -->
 
-<body>
+		<main class="pd_main container-xl">
+			<p class="pd_bread">首頁 | 周邊產品</p>
+			<div class="pd_area">
+				<!-- 商品主圖 -->
+				<div>
+					<div class="pd_pic">
+						<div class="splide01">
+							<div class="splide__track">
+								<ul class="splide__list">
+									<li class="splide__slide"><img src="" alt="" /></li>
+									<li class="splide__slide"><img src="" alt="" /></li>
+									<li class="splide__slide"><img src="" alt="" /></li>
+									<li class="splide__slide"><img src="" alt="" /></li>
+								</ul>
+							</div>
+						</div>
+						<div id="thumbnail-slider1" class="splide">
+							<div class="splide__track">
+								<ul class="splide__list under">
+									<li class="splide__slide"><img src="" alt="" /></li>
+									<li class="splide__slide"><img src="" alt="" /></li>
+									<li class="splide__slide"><img src="" alt="" /></li>
+									<li class="splide__slide"><img src="" alt="" /></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- 主圖區塊結束 -->
+				<div class="pd_info">
+					<h3 id="pd_info_name"></h3>
+					<h5 class="pd_info_slog"></h5>
+					<h5 class="pd_info_slog"></h5>
+					<p id="pd_info_ingredient"></p>
+					<h4 id="pd_info_pricr"></h4>
+					<div class="pd_info_stock">
+						<h5>數量</h5>
 
-    <!-- header -->
-    @@include('./layout/header.html')
+						<div id="pd_stockCount">
+							<button class="pd_stockCount_btn" id="pd_stockCount_minus">
+								－
+							</button>
+							<input
+								type="text"
+								id="pd_stockCount_input"
+								value="1"
+								name="add_prd_count"
+								readonly
+							/>
+							<button class="pd_stockCount_btn" id="pd_stockCount_plus">
+								＋
+							</button>
+						</div>
+						<h5>在庫數量：<span id="pd_inStock"></span></h5>
+					</div>
+					<div class="pd_info_btn">
+						<a href="#" id="pd_info_cart">放入購物車</a><br />
+						<a href="#" id="pd_info_buy">直接購買</a>
+					</div>
+				</div>
+			</div>
 
-    <!-- 商品內頁開始 -->
-
-
-    <main class="pd_main container-xl">
-
-        <p class="pd_bread">首頁 | 周邊產品 </p>
-        <div class="pd_area">
-            <!-- 商品主圖 -->
-            <div>
-                <div class="pd_pic">
-                    <div class="splide01">
-                        <div class="splide__track">
-                            <ul class="splide__list">
-                                <li class="splide__slide"><img src="" alt=""></li>
-                                <li class="splide__slide"><img src="" alt=""></li>
-                                <li class="splide__slide"><img src="" alt=""></li>
-                                <li class="splide__slide"><img src="" alt=""></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div id="thumbnail-slider1" class="splide">
-
-                        <div class="splide__track">
-
-                            <ul class="splide__list under">
-                                <li class="splide__slide"><img src="" alt=""></li>
-                                <li class="splide__slide"><img src="" alt=""></li>
-                                <li class="splide__slide"><img src="" alt=""></li>
-                                <li class="splide__slide"><img src="" alt=""></li>
-                            </ul>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <!-- 主圖區塊結束 -->
-            <div class="pd_info">
-                <h3 id="pd_info_name"></h3>
-                <h5 class="pd_info_slog"></h5>
-                    <h5 class="pd_info_slog"></h5>
-                    <p id="pd_info_ingredient"></p>
-                    <h4 id="pd_info_pricr"></h4>
-                    <div class="pd_info_stock">
-                        <h5>數量</h5>
-
-                        <div id="pd_stockCount">
-                            <button class="pd_stockCount_btn" id="pd_stockCount_minus">－</button>
-                            <input type="text" id="pd_stockCount_input" value="1" name="add_prd_count" readonly>
-                            <button class="pd_stockCount_btn" id="pd_stockCount_plus">＋</button>
-                        </div>
-                        <h5>在庫數量：<span id="pd_inStock"></span></h5>
-                    </div>
-                    <div class="pd_info_btn">
-                        <a href="#" id="pd_info_cart">放入購物車</a><br>
-                        <a href="#" id="pd_info_buy">直接購買</a>
-                    </div>
-            </div>
-        </div>
-
-        <hr class="pd__hr">
-        <!-- 專推 -->
-        <h3 class="pd_intro_h3">商品介紹</h3>
-        <div class="intro_area">
-            <!-- <div class="pd_intro">
+			<hr class="pd__hr" />
+			<!-- 專推 -->
+			<h3 class="pd_intro_h3">商品介紹</h3>
+			<div class="intro_area">
+				<!-- <div class="pd_intro">
                 <div class=" pd_intro_pic"><img src="./img/products/cow_1200.jpg" alt="">
                 </div>
                 <p>使用每日現擠的牛乳製成，無人工反式脂肪與人工賀爾蒙</p>
             </div> -->
 
-            <!-- <div class="pd_intro">
+				<!-- <div class="pd_intro">
                 <div class="pd_intro_pic "><img src="./img/products/berry_1200.jpg" alt=""></div>
                 <p>當季限定！新鮮草莓在裡面！</p>
             </div> -->
-        </div>
-        <h3 class="pd_recommend_h3">推薦商品</h3>
-        <!-- 推薦商品 -->
-        <div class="pd_recommend">
-            <div id="splide02">
-                <div class="splide__track">
-                    <ul class="pd_recommend_list splide__list">
-                        <li class="splide__slide">
-                            <a href="./product_detail.html?prd_number=11">
-                                <img src="./img/products/coffee_1200.jpg" alt="">
-                                <div class="pd_recommend_text">
-                                    <p class="pd_recommend_name">咖啡牛奶</p>
-                                    <p class="pd_recommend_price">290</p>
-                                </div>
-                            </a>
-                        </li>
+			</div>
+			<h3 class="pd_recommend_h3">推薦商品</h3>
+			<!-- 推薦商品 -->
+			<div class="pd_recommend">
+				<div id="splide02">
+					<div class="splide__track">
+						<ul class="pd_recommend_list splide__list">
+							<li class="splide__slide">
+								<a href="./product_detail.html?prd_number=11">
+									<img src="./img/products/coffee_1200.jpg" alt="" />
+									<div class="pd_recommend_text">
+										<p class="pd_recommend_name">咖啡牛奶</p>
+										<p class="pd_recommend_price">290</p>
+									</div>
+								</a>
+							</li>
 
-                        <li class="splide__slide">
-                            <a href="#">
-                                <img src="./img/products/blanket_r.jpg" alt="">
-                                <div class="pd_recommend_text">
-                                    <p class="pd_recommend_name">羊毛毯(紅)</p>
-                                    <p class="pd_recommend_price">549</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="splide__slide">
-                            <a href="./product_detail.html?prd_number=6">
-                                <img src="./img/products/animal_cookies.jpg" alt="">
-                                <div class="pd_recommend_text">
-                                    <p class="pd_recommend_name">動物餅乾</p>
-                                    <p class="pd_recommend_price">200</p>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+							<li class="splide__slide">
+								<a href="#">
+									<img src="./img/products/blanket_r.jpg" alt="" />
+									<div class="pd_recommend_text">
+										<p class="pd_recommend_name">羊毛毯(紅)</p>
+										<p class="pd_recommend_price">549</p>
+									</div>
+								</a>
+							</li>
+							<li class="splide__slide">
+								<a href="./product_detail.html?prd_number=6">
+									<img src="./img/products/animal_cookies.jpg" alt="" />
+									<div class="pd_recommend_text">
+										<p class="pd_recommend_name">動物餅乾</p>
+										<p class="pd_recommend_price">200</p>
+									</div>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<!-- 推薦商品結束 -->
+		</main>
 
-        </div>
-        <!-- 推薦商品結束 -->
+		<!-- footer -->
+		@@include('./layout/footer.html')
 
-    </main>
-
-    <!-- footer -->
-    @@include('./layout/footer.html')
-
-    <!-- <script src="./js/vendors/splide.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js"></script>
-    <script src="./js/product_detail.js"></script>
-</body>
-
+		<!-- <script src="./js/vendors/splide.min.js"></script> -->
+		<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js"></script>
+		<script src="./js/product_detail.js"></script>
+	</body>
 </html>
